# glowaurora

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.txt  Makefile  Makefile.f2py  Quickstart  Quickstart.rst  README.md  README.rst  Readme  RunGlow.py  aurexample.f  aurexample.in  aurexample.out  aurora_sub.f  cglow.F90  cglow.h  cxglow.F90  demo_aurora.py  demo_glowaurora.py  demo_quartic.py  demo_solzen.py  demo_vquart.py  egrid.f  egrid.f90  ephoto.f  etrans.f  exsect.f  fieldm.f  fortrandates.py  gchem.f  glow.f  glow.f90  glow.h  glow.inp  glow.m  glow.rst  glow.txt  glow_drv.F90  (+30 more)
examples/: PlotSolarZenithAngle.py  RunLoop.py  debug_gama.py  demo_glowaurora.py  demo_msis.py  demo_quartic.py  demo_solzen.py  loadploteigen.py
f2/: rcolum.f
fortran/: 493.f  CMakeLists.txt  Makefile  Makefile.hex  aurexample.f  aurora_sub.f  aurora_sub_future.f  cglow.h  dayexample.f  dayexample.out  egrid.f  ephoto.f  etrans.f  exsect.f  fieldm.f  gchem.f  geomag.f  glow.f  hexexample.f  iri90.f  maxt.f  qback.f  rcolum.f  rout.f  snoem.f  snoemint.f  solzen.f  ssflux.f  vquart.f
fortrancode/: 493.f  Makefile  Makefile.f2py  aurexample.f  aurexample.out  aurora_sub.f  cglow.f90  cglow.h  dayexample.f  egrid.f  egrid.f90  ephoto.f  etrans.f  exsect.f  fieldm.f  gchem.f  geomag.f  glow.f  glow.h  hexexample.f  machprec.f90  maxt.f  maxt.f90  qback.f  rcolum.f  rcolum.f90  rout.f  snoem.f  snoemint.f  solzen.f  solzen.f90  ssflux.f  vquart.f  vquart.f90
glowaurora/: __init__.py  eigenprof.py  plots.py  runglow.py  runglow_future.py  runmsisGLOW.py
reference/: Makefile  aurexample.driver  aurexample.f  aurexample.out  dayexample.driver  dayexample.in  ephoto.f  etrans.f  exsect.f  glow.f  hexexample.driver  hexexample.in  hexexample.out  rcolum.f  snoem.f  ssflux.f  vquart.f
src/: aurora_sub.f  dayglow_sub.f  iri90.f  rcolum.f  rout.f  snoem.f  ssflux.f  vquart.f  vquartnew.f
test/: test.py
tests/: test.py  test_all.py  test_fort.py  test_snoem.py
