[metadata]
name = glowaurora
version = 1.2.2
author = Stan Solomon; Liam Kilcommons; Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = GLobal airglOW Model of auroral and airglow emissions
url = https://github.com/scivision/glowaurora
keywords =
  aurora
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  xarray
  pandas
  sciencedates
  gridaurora

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plots =
  matplotlib
  seaborn
io =
  h5py
  astropy
  pandas

[options.entry_points]
console_scripts =

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
