[metadata]
name = glowaurora
version = 1.2.2
author = Stan Solomon; Liam Kilcommons; Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = GLobal airglOW Model of auroral and airglow emissions
url = https://github.com/scivision/glowaurora
keywords =
  aurora
  airglow
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  xarray
  pandas
  sciencedates
  gridaurora

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plots =
  matplotlib
  seaborn
io =
  h5py
  astropy
  pandas

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
